sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: value filter is not a member of Int
		for(getNombreValeurs()-2 to i<-0){
                                               ^